--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,6 @@
         <scope>provided</scope>
     </dependency>
 
-
-
     <!-- JAX-RS API -->
     <dependency>
         <groupId>javax.ws.rs</groupId>
@@ -54,6 +52,28 @@
         <artifactId>javaee-api</artifactId>
         <version>${javaee-api.version}</version>
         <scope>provided</scope>
+    </dependency>
+
+    <!-- CDI dependency -->
+    <dependency>
+        <groupId>javax.enterprise</groupId>
+        <artifactId>cdi-api</artifactId>
+        <version>2.0</version>
+        <scope>provided</scope>
+    </dependency>
+
+    <!-- JPA dependency -->
+    <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>javax.persistence-api</artifactId>
+        <version>2.2</version>
+    </dependency>
+
+    <!-- Hibernate dependency -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.4.30.Final</version>
     </dependency>
 
     <!-- PostgreSQL Driver -->
